[package]
name = "typ-js"
description = "A simple JS wrapper for the typst compiler"
repository = "https://github.com/snlxnet/typ-js"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.42"
typst = "0.14.0"
typst-assets = { version = "0.14.0", features = ["fonts"] }
typst-pdf = "0.14.0"
typst-svg = "0.14.0"
wasm-bindgen = "0.2.105"
