[package]
name = "typ-js"
description = "A simple JS wrapper for the typst compiler"
repository = "https://github.com/snlxnet/typ-js"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
typst = { git = "https://github.com/typst/typst.git" }
typst-layout = { git = "https://github.com/typst/typst.git" }
typst-kit = { git = "https://github.com/typst/typst.git", features = ["embedded-fonts", "bundle", "datetime"] }
typst-pdf = { git = "https://github.com/typst/typst.git" }
typst-svg = { git = "https://github.com/typst/typst.git" }
wasm-bindgen = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = true
opt-level = "z"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false
